@@ -1,18 +1,13 @@
 """Use a PDB file to build a minimum internal structure representation.
 
+Reads a PDB file line by line and is not fuzzy about numbering.
+
 .. Warning:: Only cares for atoms and their names; neither
              connectivity nor (partial) charges are deduced. Masses
              are guessed and set to 0 if unknown.
 """
 
-import os.path
-try:
-    # BioPython is overkill but potentially extensible (altLoc etc)
-    import Bio.PDB
-except ImportError:
-    raise ImportError("Bio.PDB from biopython not found. Required for PDB->PSF parser.")
-
-import MDAnalysis.coordinates.pdb.extensions
+import MDAnalysis.coordinates.PDB
 from MDAnalysis.topology.core import guess_atom_type, guess_atom_mass, guess_atom_charge
 
 class PDBParseError(Exception):
@@ -26,12 +21,8 @@ def parse(pdbfile):
     .. SeeAlso:: The *structure* dict is defined in
                  :func:`MDAnalysis.topology.PSFParser.parse`.
     """
-    root,ext = os.path.splitext(pdbfile)
-    if ext.lower() not in ('.pdb', '.ent'):
-        raise PDBParseError("%(pdbfile)r is probably not in PDB format (wrong extension).")
     structure = {}
-    # use Sloppy PDB parser to cope with big PDBs!
-    pdb =  MDAnalysis.coordinates.pdb.extensions.get_structure(pdbfile,"0UNK")
+    pdb =  MDAnalysis.coordinates.PDB.PrimitivePDBReader(pdbfile)
 
     __parseatoms_(pdb, structure)
     # TODO: reconstruct bonds from CONECT or guess from distance search
@@ -43,20 +34,17 @@ def __parseatoms_(pdb, structure):
     attr = "_atoms"  # name of the atoms section
     atoms = []       # list of Atom objects
 
-    # translate Bio.PDB atom objects to MDAnalysis Atom.
-    for iatom,atom in enumerate(pdb.get_atoms()):
-        residue = atom.parent
-        chain = residue.parent
-
+    # translate list of atoms to MDAnalysis Atom.
+    for iatom,atom in enumerate(pdb._atoms):
         atomname = atom.name
         atomtype = guess_atom_type(atomname)
-        resname = residue.resname
-        resid = residue.id[1]
-        segid = residue.get_segid().strip() or "SYSTEM"  # no empty segids (or Universe throws IndexError)
+        resname = atom.resName
+        resid = atom.resSeq
+        chain = atom.chainID.strip()
+        segid = atom.segID.strip() or "SYSTEM"  # no empty segids (or Universe throws IndexError)
         mass = guess_atom_mass(atomname)
         charge = guess_atom_charge(atomname)
 
         atoms.append(Atom(iatom,atomname,atomtype,resname,int(resid),segid,float(mass),float(charge)))
 
     structure[attr] = atoms
-
